[gd_scene load_steps=10 format=2]

[ext_resource path="res://Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://mainHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://bomb.png" type="Texture" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://explosion1.mp3" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.0784314, 0.682353, 0.890196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
margin_left = 216.0
margin_top = 664.0
margin_right = 280.0
margin_bottom = 722.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 32 )

[node name="MainHUD" parent="." instance=ExtResource( 4 )]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="game_overBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Bombsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="bomb" from="Player" to="." method="_on_Player_bomb"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="start_game" from="MainHUD" to="." method="_on_MainHUD_start_game"]
